Fix Spring AI M7 tool-call memory handling